@@ -17,7 +17,7 @@
         <maven.compiler.target>25</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <junit.version>5.10.2</junit.version>
+        <junit.version>5.11.4</junit.version>
         <javafx.version>25-ea+11</javafx.version>
     </properties>
 
@@ -43,27 +43,27 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.9</version>
+            <version>2.0.16</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.11</version>
+            <version>1.5.16</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.14.0</version>
+            <version>3.17.0</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.16.1</version>
+            <version>2.18.0</version>
         </dependency>
         <dependency>
             <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-annotations</artifactId>
-            <version>4.8.5</version>
+            <version>4.8.6</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -95,18 +95,18 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.16.1</version>
+            <version>2.18.2</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.16.1</version>
+            <version>2.18.2</version>
         </dependency>
 
         <dependency>
             <groupId>com.akathist.maven.plugins.launch4j</groupId>
             <artifactId>launch4j-maven-plugin</artifactId>
-            <version>2.2.0</version>
+            <version>2.5.1</version>
         </dependency>
 
         <dependency>
@@ -174,7 +174,7 @@
 
             <plugin>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.5.3</version>
+                <version>3.6.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -233,6 +233,9 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <options>
+                                <option>--enable-native-access=javafx.graphics</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
@@ -242,7 +245,7 @@
                 <!-- This calls launch4j to create the program EXE -->
                 <groupId>com.akathist.maven.plugins.launch4j</groupId>
                 <artifactId>launch4j-maven-plugin</artifactId>
-                <version>2.2.0</version>
+                <version>2.5.1</version>
                 <executions>
                     <execution>
                         <id>l4j-clui</id>
@@ -252,7 +255,7 @@
                         </goals>
                         <configuration>
                             <headerType>gui</headerType>
-                            <icon>${basedir}/src/main/resources/de/mephisto/vpin/app/logo.ico</icon>
+                            <icon>${project.basedir}/src/main/resources/de/mephisto/vpin/app/logo.ico</icon>
                             <outfile>target/VPin-Studio-App.exe</outfile>
                             <jar>target/vpin-studio-app.jar</jar>
                             <errTitle>VPin-Studio-App</errTitle>
@@ -263,6 +266,9 @@
                             </classPath>
                             <jre>
                                 <path>./win32/java</path>
+                                <opts>
+                                    <opt>--enable-native-access=javafx.graphics</opt>
+                                </opts>
                             </jre>
                             <versionInfo>
                                 <fileVersion>1.0.0.0</fileVersion>
