@@ -228,7 +228,7 @@
         <dependency>
             <groupId>com.akathist.maven.plugins.launch4j</groupId>
             <artifactId>launch4j-maven-plugin</artifactId>
-            <version>2.5.4</version>
+            <version>2.5.1</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
@@ -344,6 +344,7 @@
                                 <option>javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>
                                 <option>--add-exports</option>
                                 <option>javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>
+                                <option>--enable-native-access=javafx.graphics</option>
                             </options>
                         </configuration>
                     </execution>
@@ -354,7 +355,7 @@
                 <!-- This calls launch4j to create the program EXE -->
                 <groupId>com.akathist.maven.plugins.launch4j</groupId>
                 <artifactId>launch4j-maven-plugin</artifactId>
-                <version>2.5.4</version>
+                <version>2.5.1</version>
                 <executions>
                     <execution>
                         <id>l4j-clui</id>
@@ -378,6 +379,7 @@
                                 <opts>
                                     <opt>--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</opt>
                                     <opt>--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</opt>
+                                    <opt>--enable-native-access=javafx.graphics</opt>
                                 </opts>
                             </jre>
                             <versionInfo>
